--- a/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.html
@@ -209,9 +209,16 @@
 			</div>
 		</div>
 	</div>
-	<div>
-		<button type="button" class="btn btn-warning btnGenera back" (click)="enterClassMode()">
-      <span class="glyphicon glyphicon-arrow-left freccia"></span>
-      Diagramma delle Classi</button>
-  </div>
+		<div>
+			<button type="button" class="btn btn-warning btnGenera back" (click)="enterClassMode()">
+				<span class="glyphicon glyphicon-arrow-left freccia"></span>
+				Diagramma delle Classi</button>
+		</div>
+
+		<!-- test -->
+		<div>
+			<button type="button" class="btn btn-warning btnGenera back" (click)="generaCodice()">
+				<span class="glyphicon glyphicon-arrow-left freccia"></span>
+				GeneraCodice</button>
+		</div>
   </div>
