--- a/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.css
+++ b/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.css
@@ -11,6 +11,7 @@
 
 .nomeMetodo {
   color: #FFFFFF;
+  display: inline-block;
 }
 
 .row {
@@ -57,4 +58,17 @@ table {
 ul {
   padding: 5px;
   margin-bottom: 0px;
+}
+
+.delete {
+  display: inline-block;
+}
+
+.delete button {
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  /* float: right; */
+  margin-left: 20px;
+  margin-right: 20px;
 }
