FIX commenti Editor pt 2 + fix Css activity-menu
nell’activity c’era una piccola sbavatura che è stata sistemata; Ora se si seleziona una classe funziona correttamente, ma per far apparire il menù di modifica del commento ci si deve cliccare 2 volte sopra.

--- a/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.html
@@ -28,12 +28,10 @@
 	</div>
 
   <!-- Elimina forma -->
-	<div class="row">
-    <div [hidden]="!isSelected()" >
+	<div class="row" [hidden]="!isSelected()">
       <button class="btn btn-warning" (click)="deleteElement()" title="Rimuovi elemento activity">
         Elimina forma <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
       </button>
-    </div>
   </div>
 
   <!-- OPERAZIONE -->
