--- a/Front-End/src/app/components/editor-container/components/menu/components/file/file.component.html
+++ b/Front-End/src/app/components/editor-container/components/menu/components/file/file.component.html
@@ -11,7 +11,7 @@
       <input id="upload" type="file" class="custom-file-input" (change)="import($event)" placeholder="Upload file" accept=".json">
       <a onclick="$('input[id=upload]').click();">Importa progetto </a>
     </li>
-    <li><a href="#" (click)="generate()" >Genera codice</a></li>
+    <li><a (click)="generate()" >Genera codice</a></li>
     <!-- <li><a href="#" >Salva template</a></li> -->
     <li><a href="#" >Chiudi</a></li>
   </ul>
