--- a/Back-End/templates/template.html
+++ b/Back-End/templates/template.html
@@ -1,32 +1,1 @@
-public class {{name}}{
-    {{#private}}
-        {{#attrP}}
-            private {{typeP}} {{varP}} {{#defP}} = {{valueP}} {{/defP}};
-        {{/attrP}}
-        {{#methodsP}}
-            private {{typeMethodP}} {{nameMethodP}}({{#paramP}} {{#lastP}} {{tParPL}} {{nParPL}} {{/lastP}} {{#notLastP}} {{tParP}} {{nParP}}, {{/notLastP}} {{/paramP}}){
-                {{corpoMP}}
-            }
-        {{/methodsP}}  
-    {{/private}}
-    {{#public}}
-        {{#attrPU}}
-            {{typePU}} {{varPU}} {{#defPU}} = {{valuePU}} {{/defPU}};
-        {{/attrPU}}
-        {{#methodsPU}}
-            {{#main}}public static void main(String[] args){
-                {{corpoM}}
-            }
-            {{/main}}
-            {{#notMain}}
-            public {{typeMethodPU}} {{nameMethodPU}}({{#paramPU}} {{#lastPU}} {{tParPUL}} {{nParPUL}} {{/lastPU}} {{#notLastPU}} {{tParPU}} {{nParPU}}, {{/notLastPU}} {{/paramPU}}){
-                {{corpoME}}
-            }
-            {{/notMain}}
-        {{/methodsPU}} 
-    {{/public}}
-}
-        
-            
-                
-    
+{{progetto}}
