ADD remove commento al menù
Ora c’è il tasto apposto per rimuovere un commento

--- a/Front-End/src/app/components/editor-container/components/editor/editor.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/editor.component.html
@@ -23,4 +23,9 @@
       </button>
     </span>
   </div>
+  <div>
+    <button class="btn btn-warning" type="button" (click)="removeCommento()">
+      Elimina commento<span class="glyphicon glyphicon-trash" aria-hidden="true" ></span>
+    </button>
+  </div>
 </div>
