Spostato Progetto->nuovo in file -> nuovo

--- a/Front-End/src/app/components/editor-container/components/menu/components/file/file.component.html
+++ b/Front-End/src/app/components/editor-container/components/menu/components/file/file.component.html
@@ -4,6 +4,7 @@
     <span class="caret"></span>
   </button>
   <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
+    <li><a href="#">Nuovo</a></li>
     <li><a id="update" (click)="updateProj()" *ngIf="!getOpen()">Salva</a></li>
     <li><a id="save" (click)="openPopup()">Salva con nome</a></li>
     <li><a (click)="export()">Esporta</a></li>
