commit di backup importazione quasi completamente funzionante

--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-add-main-method/class-add-main-method.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-add-main-method/class-add-main-method.component.html
@@ -1,4 +1,4 @@
-<div class="container" [hidden]="this.classMenuService.isThereAMain">
+<div class="container" [hidden]="this.classMenuService.isThereAMain()">
     <button  class="btn btn-warning" (click)="addMain()">
       <span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span>&nbsp;Aggiungi Metodo Main
     </button>
