--- a/Front-End/src/app/components/editor-container/components/menu/components/profilo/components/manage-profile/components/edit-psw/edit-psw.component.html
+++ b/Front-End/src/app/components/editor-container/components/menu/components/profilo/components/manage-profile/components/edit-psw/edit-psw.component.html
@@ -4,11 +4,12 @@
           <div class="input-group">
             <span class="input-group-addon">
               <i class="glyphicon glyphicon-lock"></i>
-            </span>  
+            </span>
             <input type="password" class="form-control" name="password" required placeholder="Password"
             [(ngModel)]="newPassword"
-            id="password"/>
+            id="password"
+            placeholder="{{this.accountService.password}}"/>
           </div>
-          <input type="submit" class="btn btn-warning" value="Modifica passowrd" [disabled]="!changePswForm.form.valid"/> 
+          <input type="submit" class="btn btn-warning" value="Modifica passowrd" [disabled]="!changePswForm.form.valid"/>
         </div></form>
 </div>
