corretto boiata if e aggiunti array FUNZIONERÀ?

--- a/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.html
@@ -74,6 +74,10 @@
           <label>Valore</label>
           <input #valoreV id="valVar" type="text" [(ngModel)]="valVar" (keyup.enter)="declareVar()">
         </div>
+        <div [hidden]="!isArray()">
+          <label>Valore</label>
+          <input #valoreV id="valVar" type="text" [(ngModel)]="valVar" (keyup.enter)="declareVar()">
+        </div>
         <div [hidden]="this.tipoVar != 'char'">
           <label>Valore</label>
           <input #valoreV id="valChar" type="text" [(ngModel)]="valVar" maxlength="1" (keyup.enter)="declareVar()">
