ADD HTML/CSS lista attributi e metodi in acrivity-menu

--- a/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.css
+++ b/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.css
@@ -60,6 +60,10 @@ ul {
   margin-bottom: 0px;
 }
 
+li {
+  padding: 1px;
+}
+
 .delete {
   display: inline-block;
 }
@@ -71,4 +75,11 @@ ul {
   /* float: right; */
   margin-left: 20px;
   margin-right: 20px;
+}
+
+.S {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  max-height: 150px;
+  overflow-y: auto;
 }
